--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,8 +5,64 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <style>
+        #container{
+            padding: 80px;
+            text-align: center;
+           
+        }
+        #cont{
+            display: flex;
+        }
+        #each{
+            
+            padding-bottom: 10px;
+            padding-left: 40px;
+            padding-right: 40px;
+            border: black solid;
+            max-width: fit-content;
+            border-radius: 2px;
+            margin-bottom: 15px;
+            margin-top: 10px;
+            margin-left: 15px;
+            margin-right: 15px;
+        }
+        .view{
+            text-decoration: none;
+            padding: 10px;
+            background-color: black;
+            color: rgb(252, 252, 252);
+            border: 3px;
+            /* margin-bottom: 10px; */
+        }
+        #new{
+            text-decoration: none;
+            padding: 10px;
+            background-color: black;
+            color: rgb(252, 252, 252);
+            border: 3px;
+        }
+    </style>
 </head>
 <body>
-    <h1>Hi</h1>
+    <%- include('partials/navbar') %>
+    <div id="container">
+        
+        <a href="/accounts/new" id = "new">Add new account details</a>
+
+        <br><br>
+        <div id = "cont">
+            <% if(foundUser != null){ %> 
+                <% for(let i =0;i<foundUser.accounts.length;i++){ %> 
+                    <div id = "each">
+                        <h3><%= foundUser.accounts[i].title %></h3>
+                        <a href = "/accounts/<%= foundUser.accounts[i]._id %>" class="view">View</a><br><br>
+                    </div>
+                
+                <% } %> 
+            <% } %> 
+        </div>
+        
+    </div>
 </body>
 </html>
