--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,13 +9,19 @@
         #container{
             padding: 80px;
             text-align: center;
+            /* overflow-wrap: break-word; */
+            /* max-width: 1000px; */
+            /* text-overflow: row; */
            
         }
         #cont{
             display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
         }
         #each{
-            
+           
+
             padding-bottom: 10px;
             padding-left: 40px;
             padding-right: 40px;
