--- a/views/show.ejs
+++ b/views/show.ejs
@@ -26,10 +26,10 @@
     <%- include('partials/navbar') %>
     <div id = "container">
         
-        <h1>Title : <%= account.title %></h1>
-        <h1>Username : <%= account.username %></h1>
-        <h1>Email  : <%= account.email %> </h1>
-        <h1>Password : <%= password %></h1>
+        <h1>Title :<span style="font-weight: lighter;"><%= account.title %></span> </h1>
+        <h1>Username :<span style="font-weight: lighter;"> <%= account.username %></span></h1>
+        <h1>Email  :<span style="font-weight: lighter;"><%= account.email %> </span></h1>
+        <h1>Password : <span style="font-weight: lighter;"><%= password %></span></h1>
         <form action="/accounts/<%= account._id %>?_method=DELETE" method="POST" >
             <button type="submit" class="view" >Delete</button><br><br>
         </form>
