--- a/views/new.ejs
+++ b/views/new.ejs
@@ -25,6 +25,11 @@
             color: white;
             font-size: 20px;
         }
+        @media only screen and (max-width: 800px) {
+           form{
+               padding-left: 20px;
+           }
+        }
     </style>
 </head>
 <body>
@@ -50,7 +55,7 @@
             
             <div>
                 <label for="password"> Password : </label><br>
-                <input class="textArea" id="generatedPassword" type="text" name="account[password]" placeholder="Password" required><br><br> 
+                <input class="textArea" id="generatedPassword" type="password" name="account[password]" placeholder="Password" required><br><br> 
             </div>
             
             <button id="saveButton" type="submit">Save</button>
